--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node  .\\apolloServer\\server.ts",
-    "migrate":"npx prisma migrate dev"
+    "migrate":"npx prisma migrate dev",
+    "seed":"node seed.js"
   },
   "keywords": [],
   "author": "",
